--- a/src/BD/AlquilerInterfaz/V_ServicioAdicional.form
+++ b/src/BD/AlquilerInterfaz/V_ServicioAdicional.form
@@ -103,13 +103,6 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtIdCasa">
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="130" y="80" width="150" height="-1"/>
-        </Constraint>
-      </Constraints>
-    </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
@@ -202,7 +195,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="10">
                 <Column editable="false" title="ID SERVICIO" type="java.lang.Object"/>
-                <Column editable="false" title="ID CASA" type="java.lang.Object"/>
+                <Column editable="false" title="NOMBRE CASA" type="java.lang.Object"/>
                 <Column editable="false" title="NOMBRE SERVICIO" type="java.lang.Object"/>
                 <Column editable="false" title="DESCRIPCION SERVICIO" type="java.lang.Object"/>
                 <Column editable="false" title="COSTO ADICIONAL" type="java.lang.Object"/>
@@ -252,7 +245,7 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
             <StringItem index="0" value="ID Servicio"/>
-            <StringItem index="1" value="ID Casa"/>
+            <StringItem index="1" value="Nombre Casa"/>
             <StringItem index="2" value="Nombre Servicio"/>
           </StringArray>
         </Property>
@@ -289,6 +282,26 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="440" y="230" width="120" height="-1"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cbxCasas">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="4">
+            <StringItem index="0" value="Item 1"/>
+            <StringItem index="1" value="Item 2"/>
+            <StringItem index="2" value="Item 3"/>
+            <StringItem index="3" value="Item 4"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="130" y="80" width="150" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
