Agrege el metodo para cargar los clientes a los comboxbox correspondientes

--- a/src/BD/AlquilerInterfaz/CRUD_Comentario.form
+++ b/src/BD/AlquilerInterfaz/CRUD_Comentario.form
@@ -72,7 +72,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="cbxCasas" pref="134" max="32767" attributes="0"/>
-                                  <Component id="CboxIDCliente" pref="134" max="32767" attributes="0"/>
+                                  <Component id="CboxClientes" pref="134" max="32767" attributes="0"/>
                                   <Component id="txtIDComen" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -103,7 +103,7 @@
                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="CboxIDCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="CboxClientes" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -246,7 +246,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="CboxIDCliente">
+    <Component class="javax.swing.JComboBox" name="CboxClientes">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
