--- a/src/BD/AlquilerInterfaz/CRUD_Contrato.form
+++ b/src/BD/AlquilerInterfaz/CRUD_Contrato.form
@@ -58,7 +58,7 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jComboBox1" min="-2" pref="125" max="-2" attributes="0"/>
+                          <Component id="CboxClientes" min="-2" pref="125" max="-2" attributes="0"/>
                           <Component id="cbxCasas" min="-2" pref="125" max="-2" attributes="0"/>
                           <Component id="jTextField1" alignment="0" min="-2" pref="125" max="-2" attributes="0"/>
                       </Group>
@@ -130,7 +130,7 @@
                       <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="CboxClientes" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -208,7 +208,7 @@
         <Property name="text" type="java.lang.String" value="ID CLIENTE :"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox1">
+    <Component class="javax.swing.JComboBox" name="CboxClientes">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
