Modificacion para que consulte correctamente

--- a/src/BD/AlquilerInterfaz/CRUD_Propietario.form
+++ b/src/BD/AlquilerInterfaz/CRUD_Propietario.form
@@ -20,7 +20,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,33,0,0,3,36"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,89,0,0,3,62"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -71,7 +71,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="250" y="50" width="-1" height="-1"/>
+          <AbsoluteConstraints x="250" y="50" width="40" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -122,18 +122,28 @@
     <Component class="javax.swing.JComboBox" name="cbxNacionalidad">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="11">
-            <StringItem index="0" value="Ecuatoriano"/>
-            <StringItem index="1" value="Mexicano"/>
-            <StringItem index="2" value="Canadiense"/>
-            <StringItem index="3" value="Brasile&#xf1;o"/>
-            <StringItem index="4" value="Ucraniana"/>
-            <StringItem index="5" value="Brit&#xe1;nica"/>
-            <StringItem index="6" value="Escocesa"/>
-            <StringItem index="7" value="Finlandesa"/>
-            <StringItem index="8" value="Austriaca"/>
-            <StringItem index="9" value="Rusa"/>
-            <StringItem index="10" value="Espa&#xf1;ola"/>
+          <StringArray count="21">
+            <StringItem index="0" value="Seleccionar"/>
+            <StringItem index="1" value="Ecuatoriana"/>
+            <StringItem index="2" value="Estadounidense"/>
+            <StringItem index="3" value="Mexicana"/>
+            <StringItem index="4" value="Colombiana"/>
+            <StringItem index="5" value="Argentina"/>
+            <StringItem index="6" value="Espa&#xf1;ola"/>
+            <StringItem index="7" value="Brasile&#xf1;a"/>
+            <StringItem index="8" value="Canadiense"/>
+            <StringItem index="9" value="Peruana"/>
+            <StringItem index="10" value="Francesa"/>
+            <StringItem index="11" value="Alemana"/>
+            <StringItem index="12" value="Italiana"/>
+            <StringItem index="13" value="Inglesa"/>
+            <StringItem index="14" value="China"/>
+            <StringItem index="15" value="Japonesa"/>
+            <StringItem index="16" value="Coreana"/>
+            <StringItem index="17" value="Australiana"/>
+            <StringItem index="18" value="Chilena"/>
+            <StringItem index="19" value="Venezolana"/>
+            <StringItem index="20" value="Suiza"/>
           </StringArray>
         </Property>
       </Properties>
@@ -196,7 +206,7 @@
     <Component class="javax.swing.JSpinner" name="spnEdad">
       <Properties>
         <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-          <SpinnerModel initial="1" maximum="100" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
+          <SpinnerModel initial="18" maximum="100" minimum="18" numberType="java.lang.Integer" stepSize="1" type="number"/>
         </Property>
       </Properties>
       <Constraints>
@@ -211,7 +221,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="40" y="180" width="-1" height="-1"/>
+          <AbsoluteConstraints x="40" y="180" width="-1" height="20"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -227,7 +237,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="90" y="170" width="-1" height="-1"/>
+          <AbsoluteConstraints x="90" y="180" width="-1" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -243,7 +253,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="170" y="170" width="70" height="-1"/>
+          <AbsoluteConstraints x="170" y="180" width="70" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -334,7 +344,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="320" width="780" height="220"/>
+          <AbsoluteConstraints x="10" y="320" width="810" height="270"/>
         </Constraint>
       </Constraints>
 
@@ -408,6 +418,10 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TablaPropietariosMouseClicked"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TablaPropietariosKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -445,6 +459,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnBuscarFiltro">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/imagenes/busqueda.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
       <Events>
